update readme JVM args